--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,11 @@ aiomysql>=0.2.0
 pydantic>=2.5.2
 python-multipart>=0.0.6
 python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4 
+passlib[bcrypt]>=1.7.4
+jinja2>=3.1.2
+markdown2>=2.4.10
+bcrypt>=4.1.1
+email-validator>=2.1.0
+httpx>=0.25.2
+pytest>=7.4.3
+pytest-asyncio>=0.23.2 
